<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/screen"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/dialog_text"
        android:textColor="@color/ic_launcher_background"
        android:textColorHint="@color/btnMenuTint" />

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/top"
        android:textColor="@color/ic_launcher_background"
        android:textColorHint="@color/btnMenuTint" />

    <TextView
        android:id="@+id/tvYouScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/you"
        android:textAllCaps="true"
        android:textColor="@color/btnMenuTint"
        android:textStyle="bold">

    </TextView>

    <Button
        android:backgroundTint="@color/btnMenuTint"
        android:id="@+id/btnDialogBack"
        android:text="@string/btnDialog"
        android:layout_marginHorizontal="42dp"
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>